# thesis

./: TrafficStationDebug.spec  authentication_window.py  change_credential_window.py  dashboard.py  database.py  detector.py  loading_window.py  main.py  pyproject.toml  recovery_setup_window.py  traffic_system.db  traffic_system_v3.db
best_ncnn_model/: metadata.yaml
yolo11n_ncnn_model/: metadata.yaml
