[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "gpiod>=2.4.0",
    "gpiozero>=2.0.1",
    "lgpio>=0.2.2.0",
    "ncnn>=1.0.20260114",
    "opencv-python>=4.13.0.92",
    "pnnx>=20260112",
    "pyinstaller>=6.19.0",
    "pyserial>=3.5",
    "pyside6>=6.10.2",
    "rpi-lgpio>=0.6",
    "ultralytics>=8.4.14",
]
